[package]
name = "cephei_abuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bitcode = "0.6.0"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
futures-util = "0.3.30"
grammers-client = { version = "0.6.0", features = ["proxy"] }
grammers-session = "0.5.2"
grammers-tl-types = "0.6.0"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["json", "socks"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
urlencoding = "2.1.3"
